name:                torrskel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Aaron Smith
maintainer:          aaronsmith.dev@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bencode
                     , Tracker
                     , FileManager
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-show
  default-language:    Haskell2010

executable torrskel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , torrskel
  default-language:    Haskell2010

test-suite spec
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BencodeSpec.hs
  build-depends:       base
                     , torrskel
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
