name:                torrskel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             MIT
license-file:        LICENSE
author:              Aaron Smith
maintainer:          aaronsmith.dev@gmail.com
copyright: 2017 Aaron Smith
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md

source-repository head
  type:     git
  location: https://github.com/dblarons/torrskel

library
  hs-source-dirs:      src
  exposed-modules:     Bencode
                     , Tracker
                     , MetaInfoFile
                     , BType
                     , Util
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , transformers
                     , transformers-compat
                     , lens
                     , wreq
  default-language:    Haskell2010

executable torrskel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , torrskel
                     , transformers
                     , transformers-compat
                     , wreq
  default-language:    Haskell2010

test-suite spec
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , torrskel
                     , hspec
                     , bytestring
  exposed-modules:       BTypeSpec
                     , BencodeSpec
                     , MetaInfoFileSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
